--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Ifys-first-site : ">
+    <meta name="description" content="Yetco : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Yetco/ifys-first-site">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/Yetco/Yetco">View on GitHub</a>
 
-          <h1 id="project_title">Ifys-first-site</h1>
+          <h1 id="project_title">Yetco</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Yetco/ifys-first-site/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Yetco/ifys-first-site/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/Yetco/Yetco/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Yetco/Yetco/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
