--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
           <a id="forkme_banner" href="https://github.com/Yetco/Yetco">View on GitHub</a>
 
           <h1 id="project_title">Yetco</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">August 4, 2007</h2>
+
+              <p>Ify Nonyelu fell asleep while driving.  His van flipped three times down an embankment. He survived but he suffered a C4-C5 spinal cord injury, which me
+              </p>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Yetco/Yetco/zipball/master">Download this project as a .zip file</a>
