--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
           <h1 id="project_title">Yetco</h1>
           <h2 id="project_tagline">August 4, 2007</h2>
 
-              <p>Ify Nonyelu fell asleep while driving.  His van flipped three times down an embankment. He survived but he suffered a C4-C5 spinal cord injury, which me
-              </p>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Yetco/Yetco/zipball/master">Download this project as a .zip file</a>
@@ -35,7 +33,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="August-4-2007" class="anchor" href="#August-4-2007" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
