--- a/index.html
+++ b/index.html
@@ -35,14 +35,23 @@
         <h3>
 <a id="August-4-2007" class="anchor" href="#August-4-2007" aria-hidden="true"><span class="octicon octicon-link"></span></a>August-4-2007.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Ify Nonyelu fell asleep while driving.  His van flipped three times down an embankment. He survived but he suffered a C4-C5 spinal cord injury, which me
+</p>
+
+<p>Before the accident, Ify had been diagnosed with scoliosis – curvature of the spine. His spinal cord injury caused his scoliosis to worsen and there was no choice but to operate so Ify had a spinal fusion, which made him two inches taller. He can no longer get into his van without someone forcing his head down to fit under the door. This causes pain and puts the rods and pins that were placed in his back at risk of being dislodged. His chair is custom fitted to his leg length so the chair cannot be lowered. Because of the pain of being forced in and out of the van, Ify doesn't leave the house.</p>
+
+
+<p>
+ To donate please click the link. <a href="http://Gofundme.com/ifynonyelu">Gofundme.com/ifynonyelu</a>
+</p>
+
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+ 
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
