--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 <p>Before the accident, Ify had been diagnosed with scoliosis – curvature of the spine. His spinal cord injury caused his scoliosis to worsen and there was no choice but to operate so Ify had a spinal fusion, which made him two inches taller. He can no longer get into his van without someone forcing his head down to fit under the door. This causes pain and puts the rods and pins that were placed in his back at risk of being dislodged. His chair is custom fitted to his leg length so the chair cannot be lowered. Because of the pain of being forced in and out of the van, Ify doesn't leave the house.</p>
 
-<p>Ify wants to go to college and become a software engineer and regain some independence.  He continues to flash an amazing smile to everyone who looks his way. He has kept his faith and devotion to God. His favorite Bible verse is<br />Peter 5:10 
+<p>Ify wants to go to college and become a software engineer and regain some independence.  He continues to flash an amazing smile to everyone who looks his way. He has kept his faith and devotion to God. His favorite Bible verse is Peter 5:10<br />
 
-And the God of all grace, who called you to his eternal glory in Christ, after you have suffered a little while, will himself restore you and make you strong, firm and steadfast. 
+<p>And the God of all grace, who called you to his eternal glory in Christ, after you have suffered a little while, will himself restore you and make you strong, firm and steadfast.</p>
 
-Please help Ify get a van, get back out into the world and reach his goals.
+<p>Please help Ify get a van, get back out into the world and reach his goals.
 </p>
 
 <p>
