--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 
     <title>My Story</title>
   </head>
-
+  <style>
+   h1 {
+    color: maroon;
+    background-color: green;
+}
+  </style>
   <body>
 
     <!-- HEADER -->
@@ -42,7 +47,7 @@
 
 <p>Ify wants to go to college and become a software engineer and regain some independence.  He continues to flash an amazing smile to everyone who looks his way. He has kept his faith and devotion to God. His favorite Bible verse is Peter 5:10<br />
 
-<p>And the God of all grace, who called you to his eternal glory in Christ, after you have suffered a little while, will himself restore you and make you strong, firm and steadfast.</p>
+<p>"And the God of all grace, who called you to his eternal glory in Christ, after you have suffered a little while, will himself restore you and make you strong, firm and steadfast."</p>
 
 <p>Please help Ify get a van, get back out into the world and reach his goals.
 </p>
